# hackathon

./: .env.example  .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
conf/: config.yaml
conf/data/: banking.yaml
conf/model/: lgbm.yaml  xgb.yaml
conf/training/: cv.yaml
dashboard/: app.py  requirements.txt
dashboard/pages/: 1_Overview.py  2_Performance.py  3_Predict.py
dashboard/utils/: loader.py
data/processed/: feature_meta.json  test_features.parquet  train_features.parquet
outputs/models/: oof_predictions.parquet
outputs/reports/: cv_metrics.json  feature_importance.parquet  oof_metrics.json  quality_report.json
outputs/submissions/: submission_20260310_121022.csv
scripts/: predict.py  train.py  validate_submission.py
src/data/: ingestion.py  preprocessing.py  splits.py  validation.py
src/de/: backfill.py  observability.py  quality_checks.py  schema_registry.py
src/evaluation/: metrics.py  reports.py
src/features/: engineering.py  selection.py
src/models/: base.py  ensemble.py  lgbm_model.py  xgb_model.py
src/pipelines/: inference_pipeline.py  submission_pipeline.py  training_pipeline.py
src/utils/: io.py  logging.py  reproducibility.py
tests/: conftest.py
tests/test_data/: test_preprocessing.py  test_validation.py
tests/test_de/: test_schema_registry.py
tests/test_features/: test_engineering.py
tests/test_models/: test_metrics.py
